Keys paint red when pressed

--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
 <body>
     <div data-keyName="Escape">esc</div>
     <div data-keyName="none"></div>
-    <div data-keyName="f1">f1</div>
-    <div data-keyName="f2">f2</div>
-    <div data-keyName="f3">f3</div>
-    <div data-keyName="f4">f4</div>
-    <div data-keyName="f5">f5</div>
-    <div data-keyName="f6">f6</div>
-    <div data-keyName="f7">f7</div>
-    <div data-keyName="f8">f8</div>
-    <div data-keyName="f9">f9</div>
-    <div data-keyName="f10">f10</div>
-    <div data-keyName="f11">f11</div>
-    <div data-keyName="f12">f12</div>
+    <div data-keyName="F1">f1</div>
+    <div data-keyName="F2">f2</div>
+    <div data-keyName="F3">f3</div>
+    <div data-keyName="F4">f4</div>
+    <div data-keyName="F5">f5</div>
+    <div data-keyName="F6">f6</div>
+    <div data-keyName="F7">f7</div>
+    <div data-keyName="F8">f8</div>
+    <div data-keyName="F9">f9</div>
+    <div data-keyName="F10">f10</div>
+    <div data-keyName="F11">f11</div>
+    <div data-keyName="F12">f12</div>
     <div data-keyName="none"></div>
     <div data-keyName="Print">Print</div>
     <div data-keyName="Scroll_Lock">Scroll Lock</div>
@@ -69,7 +69,7 @@
     <div data-keyName="i">I</div>
     <div data-keyName="o">O</div>
     <div data-keyName="p">P</div>
-    <div data-keyName="`">`</div>
+    <div data-keyName="Dead">`</div>
     <div data-keyName="[">[</div>
     <div data-keyName="Enter">Enter</div>
     <div data-keyName="Insert">Insert</div>
@@ -91,9 +91,9 @@
     <div data-keyName="k">K</div>
     <div data-keyName="l">L</div>
     <div data-keyName="ç">Ç</div>
-    <div data-keyName="~">~</div>
+    <div data-keyName="Dead">~</div>
     <div data-keyName="]">]</div>
-    <div data-keyName="none"></div>
+    <div data-keyName="Enter"></div>
     <div data-keyName="Delete">Delete</div>
     <div data-keyName="Page_Down">Page Down</div>
     <div data-keyName="4">4</div>
@@ -101,9 +101,9 @@
     <div data-keyName="6">6</div>
     <div data-keyName="-">-</div>
 
-    <div data-keyName="Left_Shift">Shift</div>
-    <div data-keyName="none"></div>
-    <div data-keyName="\">\</div>
+    <div data-keyName="Shift" class="Left_Shift">Shift</div>
+    <div data-keyName="Shift"></div>
+    <div data-keyName="Barra">\</div>
     <div data-keyName="z">Z</div>
     <div data-keyName="x">X</div>
     <div data-keyName="c">C</div>
@@ -114,8 +114,8 @@
     <div data-keyName=",">,</div>
     <div data-keyName=".">.</div>
     <div data-keyName=";">;</div>
-    <div data-keyName="none"></div>
-    <div data-keyName="Right_Shift">Shift</div>
+    <div data-keyName="Shift"></div>
+    <div data-keyName="Shift" class="Right_Shift">Shift</div>
     <div data-keyName="none"></div>
     <div data-keyName="none"></div>
     <div data-keyName="1">1</div>
@@ -123,27 +123,27 @@
     <div data-keyName="3">3</div>
     <div data-keyName="Enter">Enter</div>
 
-    <div data-keyName="Left_Ctrl">Ctrl</div>
+    <div data-keyName="Control">Ctrl</div>
     <div data-keyName="Win">Win</div>
     <div data-keyName="Alt">Alt</div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space">Space</div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="Space"></div>
-    <div data-keyName="AltGr">AltGr</div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" ">Space</div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" "></div>
+    <div data-keyName=" "></div>
+    <div data-keyName="AltGraph">AltGr</div>
     <div data-keyName="Opt">Opt</div>
-    <div data-keyName="Right_Ctrl">Ctrl</div>
+    <div data-keyName="Control">Ctrl</div>
     <div data-keyName="none"></div>
     <div data-keyName="none"></div>
     <div data-keyName="0">0</div>
     <div data-keyName="none"></div>
     <div data-keyName=".">.</div>
-    <div data-keyName="none"></div>
+    <div data-keyName="Enter"></div>
 </body>
 
 </html>
