--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div data-keyName="Enter"></div>
     </keyboard>
 
-    <input>
+    <input placeholder="Mobile type your text here">
 </body>
 
 </html>
