warning don't work mobile

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div data-keyName="Enter"></div>
     </keyboard>
 
-    <input placeholder="Mobile type your text here">
+    <h2>This site don't work on a mobile device, please visit in the computer</h2>
 </body>
 
 </html>
