Fix page_up and page_down keys

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div data-keyName="[">[</div>
         <div data-keyName="Enter">Enter</div>
         <div data-keyName="Insert">Insert</div>
-        <div data-keyName="Page_Up">Page Up</div>
+        <div data-keyName="PageUp">Page Up</div>
         <div data-keyName="7">7</div>
         <div data-keyName="8">8</div>
         <div data-keyName="9">9</div>
@@ -96,7 +96,7 @@
         <div data-keyName="]">]</div>
         <div data-keyName="Enter"></div>
         <div data-keyName="Delete">Delete</div>
-        <div data-keyName="Page_Down">Page Down</div>
+        <div data-keyName="PageDown">Page Down</div>
         <div data-keyName="4">4</div>
         <div data-keyName="5">5</div>
         <div data-keyName="6">6</div>
